# puzzles

./: setup.cfg
data/: 186.in  189.in  190.in
src/puzzles/: slither_graphillion.py  slitherlink.py
tests/: test_slitherlink.py
