[metadata]
name = puzzles
version = attr: puzzles.VERSION
author = Jimmy Mårdell
author_email = jimmy.mardell@gmail.com
description = Solvers of various pen-and-paper puzzles
keywords = puzzles, sudoku-solver, kakuro-solver, slitherlink-solver
license = BSD-3-Clause
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
python_requires = >=3.7
# install_requires =


[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.rst
hello = *.msg
